horizontal scroll fixed

--- a/src/main.css
+++ b/src/main.css
@@ -69,6 +69,7 @@
 
 html {
   background-color: var(--darker);
+  overflow-x: hidden;
 }
 
 img {
@@ -424,15 +425,17 @@ main {
   opacity: 0.5;
 }
 
+.carousel-image.loading,
+.zoom-image.loading {
+  animation: pulse 2s ease-in-out infinite alternate;
+}
+
 @keyframes pulse {
-  0% {
+  from {
     opacity: 0.5;
   }
-  50% {
+  to {
     opacity: 0.7;
-  }
-  100% {
-    opacity: 0.5;
   }
 }
 
